--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "node scripts/create-database.js",
+    "start": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,12 @@
   },
   "homepage": "https://github.com/sarahlmoran/music-library#readme",
   "devDependencies": {
-    "eslint": "^8.34.0"
+    "dotenv": "^16.0.3",
+    "eslint": "^8.34.0",
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.9.0"
   }
 }
