--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
     "pg": "^8.9.0",
     "postgres-migrations": "^5.3.0",
     "swagger-jsdoc": "^6.2.8",
